--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,19 +11,19 @@ set(TEST_SOURCES
 )
 
 # Create test executable
-add_executable(db_navigator_tests ${TEST_SOURCES})
+add_executable(catyas_tests ${TEST_SOURCES})
 
 # Link test libraries
-target_link_libraries(db_navigator_tests
+target_link_libraries(catyas_tests
     Qt6::Test
     Qt6::Core
     Qt6::Sql
 )
 
 # Include directories for tests
-target_include_directories(db_navigator_tests PRIVATE
+target_include_directories(catyas_tests PRIVATE
     ${CMAKE_SOURCE_DIR}/include
 )
 
 # Add test
-add_test(NAME db_navigator_tests COMMAND db_navigator_tests)
+add_test(NAME catyas_tests COMMAND catyas_tests)
