--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
+    "custom-electron-titlebar": "^4.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "mysql2": "^3.11.0",
