--- a/package.json
+++ b/package.json
@@ -12,42 +12,42 @@
     "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
-    "custom-electron-titlebar": "^4.2.8",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "mysql2": "^3.11.0",
-    "pg": "^8.12.0",
-    "oracledb": "^6.5.1",
-    "better-sqlite3": "^11.3.0",
-    "tedious": "^18.3.0",
-    "mariadb": "^3.3.1",
-    "mongodb": "^6.8.0",
-    "redis": "^4.7.0",
+    "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "lucide-react": "^0.441.0"
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "better-sqlite3": "^11.3.0",
+    "custom-electron-titlebar": "^4.2.8",
+    "lucide-react": "^0.441.0",
+    "mariadb": "^3.3.1",
+    "mongodb": "^6.8.0",
+    "mysql2": "^3.11.0",
+    "oracledb": "^6.5.1",
+    "pg": "^8.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "redis": "^4.7.0",
+    "tedious": "^18.3.0"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/node": "^22.5.4",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.1",
+    "electron": "^32.0.1",
+    "electron-builder": "^24.13.3",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
     "vite": "^5.4.3",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "electron": "^32.0.1",
-    "electron-builder": "^24.13.3",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.45",
-    "autoprefixer": "^10.4.20",
-    "concurrently": "^9.0.1",
     "wait-on": "^8.0.1"
   },
   "build": {
