--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "tedious": "^18.3.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.5.4",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
