--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
-    "electron:build": "vite build && electron-builder"
+    "electron:build": "vite build && electron-builder",
+    "clean": "rm -rf dist dist-electron release"
   },
   "dependencies": {
     "@radix-ui/react-context-menu": "^2.2.1",
@@ -27,7 +28,7 @@
     "lucide-react": "^0.441.0",
     "mariadb": "^3.3.1",
     "mongodb": "^6.8.0",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.15.1",
     "oracledb": "^6.5.1",
     "pg": "^8.12.0",
     "react": "^18.3.1",
